objects/Time_Reservation__c/Time_Reservation__c.object-meta.xml
<CustomObject>
    <label>Time Reservation</label>
    <nameField>
        <label>Meeting Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>