objects/Time_Reservation__c/fields/EndTime_Min__c.field-meta.xml
<CustomField>
    <fullName>EndTime_Min__c</fullName>
    <label>EndTime Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>