objects/Time_Reservation__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>Seat</label>
    <referenceTo>Seat__c</referenceTo>
    <relationshipLabel>Time Reservations</relationshipLabel>
    <relationshipName>Time_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>