objects/Time_Reservation__c/fields/StartTime_Min__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Min__c</fullName>
    <label>StartTime Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>