objects/Time_Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EndTime__c</columns>
    <columns>EndTime_Min__c</columns>
    <columns>StartTime__c</columns>
    <columns>StartTime_Min__c</columns>
    <columns>Seat__c</columns>
    <columns>User__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>